--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -32,9 +32,8 @@
     <!-- Default color for notification LED is white. -->
     <color name="config_defaultNotificationColor">#ffffffff</color>
 
-    <!-- Default value for led color when battery is medium charged -->
     <!-- The green LED is brighter than red, bias closer to yellow. -->
-    <integer name="config_notificationsBatteryMediumARGB">0xFFFF6000</integer>
+    <integer name="config_notificationsBatteryMediumARGB">0xFFECFF00</integer>
 
     <!-- Indicate whether the lid state impacts the accessibility of
 	the physical keyboard. 0 means it doesn't, 1 means it is accessible
